Fix Heading Padding
Was overlapping with Navbar and is now fixed.

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -125,7 +125,7 @@ h1
 }
 
 #title {
-    padding-top: 50px;
+    padding-top: 70px;
 }
 
 #stats {
